# CS336-Assignment1-StudentVersion

./: .gitignore  README.md  pyproject.toml
cs336_basics/: RMSNorm.py  TransformerBlock.py  TransformerLM.py  ffn.py  multihead_self_attention.py  rope.py  scaled_dot_product_attention.py  softmax.py  test.py  tmp.py
cs336_basics/Chapter2/: BPE_Tokenizer.py  Tokenizer.py  __init__.py  pretokenization_example.py
cs336_basics/Chapter3/: TransformerBlock.py  TransformerLM.py  __init__.py  embedding.py  ffn.py  linear.py  multihead_self_attention.py  rope.py  scaled_dot_product_attention.py  softmax.py
cs336_basics/Chapter4/: AdamW.py  __init__.py  cross_entropy.py  gradient_clip.py  learning_rate_schedule.py
cs336_basics/Chapter5/: __init__.py  checkpointing.py  data_loading.py  train.py
cs336_basics/Chapter6/: decoding.py  prepare_data.py
tests/: __init__.py  adapters.py  test_tokenizer.py
